Closed Bug 1647425 Opened 5 years ago Closed 5 years ago

Fix use of GetTopLevelContentDocument in HTMLMediaElement::MaybeNotifyAutoplayBlocked

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: kmag, Assigned: alwu)

References

Details

Attachments

(2 files)

GetTopLevelContentDocument returns null if the top-level document is cross-process or has cross-process interstitials between it and the current document. That means that the GloballyAutoplayBlocked will never be dispatched for any such documents.

Component: DOM: Core & HTML → Audio/Video: Playback
Assignee: nobody → alwu
Severity: -- → S3
Priority: -- → P3
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fe77c77e6825 part1 : dispatch chrome event to owner doc. r=kmag https://hg.mozilla.org/integration/autoland/rev/3a4427a62af7 part2 : add test. r=daleharvey
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: