Bug 1647425 - part1 : dispatch chrome event to owner doc. r=kmag

We handle `GloballyAutoplayBlocked` event in `Autoplay` actors which exist in all frames [1], so we can actually dispatch the event directly from any document.

Then, we would find the correct top document in `AutoplayParentActor`[2].

[1] https://searchfox.org/mozilla-central/rev/5a4aaccb28665807a6fd49cf48367d47fbb5a19a/toolkit/modules/ActorManagerParent.jsm#118-130
[2] https://searchfox.org/mozilla-central/source/toolkit/actors/AutoplayParent.jsm#11-18

Differential Revision: https://phabricator.services.mozilla.com/D81764